Exams/exam_19.01.14/3-0-ft_atoi_base/3-0-ft_atoi_base.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z1r4p29.42.us.org
Darwin 17.4.0 x86_64
$> date
Tue Jan 15 10:21:58 PST 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190115/ititkov

= Git history ==================================================================
$> git -C /var/folders/9n/7tmk61kn0_9dv258n45rgsgm0000gp/T/tmpL7bYyW/user log --pretty='%H - %an, %ad : %s'
c0f0eb6ff9c389e1dbf5db1d03739c96ae5a9135 - Exam 42, Tue Jan 15 10:21:47 2019 -0800 : ft_atoi_base
5ebbadcf52025166dace24ccacdd174bd589eaa1 - Exam 42, Tue Jan 15 10:12:45 2019 -0800 : alpha_mirror
e673e9a83c4a28e58fa07533ccba72a9f3b4dda9 - Exam 42, Tue Jan 15 09:47:01 2019 -0800 : ft_swap
e4d498894e26c5e395584cefc1d49f26a92899eb - Exam 42, Tue Jan 15 09:33:55 2019 -0800 : ft_strcpy
372c1ded3730354d94393018ae1e4c4e5ef7c950 - Exam 42, Tue Jan 15 09:12:16 2019 -0800 : ft_print_numbers
 
= Collected files ==========================================
$> ls -lAR /var/folders/9n/7tmk61kn0_9dv258n45rgsgm0000gp/T/tmpL7bYyW/user
total 8
-rw-r--r--  1 deepthought  deepthought  1171 Jan 15 10:21 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Jan 15 10:21 alpha_mirror
drwxr-xr-x  3 deepthought  deepthought   102 Jan 15 10:21 ft_atoi_base
drwxr-xr-x  3 deepthought  deepthought   102 Jan 15 10:21 ft_print_numbers
drwxr-xr-x  3 deepthought  deepthought   102 Jan 15 10:21 ft_strcpy
drwxr-xr-x  3 deepthought  deepthought   102 Jan 15 10:21 ft_swap

/var/folders/9n/7tmk61kn0_9dv258n45rgsgm0000gp/T/tmpL7bYyW/user/alpha_mirror:
total 8
-rw-r--r--  1 deepthought  deepthought  1245 Jan 15 10:21 alpha_mirror.c

/var/folders/9n/7tmk61kn0_9dv258n45rgsgm0000gp/T/tmpL7bYyW/user/ft_atoi_base:
total 8
-rw-r--r--  1 deepthought  deepthought  983 Jan 15 10:21 ft_atoi_base.c

/var/folders/9n/7tmk61kn0_9dv258n45rgsgm0000gp/T/tmpL7bYyW/user/ft_print_numbers:
total 8
-rw-r--r--  1 deepthought  deepthought  975 Jan 15 10:21 ft_print_numbers.c

/var/folders/9n/7tmk61kn0_9dv258n45rgsgm0000gp/T/tmpL7bYyW/user/ft_strcpy:
total 8
-rw-r--r--  1 deepthought  deepthought  988 Jan 15 10:21 ft_strcpy.c

/var/folders/9n/7tmk61kn0_9dv258n45rgsgm0000gp/T/tmpL7bYyW/user/ft_swap:
total 8
-rw-r--r--  1 deepthought  deepthought  973 Jan 15 10:21 ft_swap.c
 
= ft_atoi_base =================================================================
$> gcc -Wextra -Wall -Werror ft_atoi_base.c main.c -o user_exe 
ft_atoi_base.c:13:31: error: unused parameter 'str' [-Werror,-Wunused-parameter]
int             ft_atoi_base(const char *str, int str_base)
                                         ^
ft_atoi_base.c:13:40: error: unused parameter 'str_base' [-Werror,-Wunused-parameter]
int             ft_atoi_base(const char *str, int str_base)
                                                  ^
ft_atoi_base.c:16:1: error: control reaches end of non-void function [-Werror,-Wreturn-type]
}
^
3 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
